# BharatLens

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py  test_code.py
app/api/: deps.py
app/api/v1/: auth.py  chat.py  multimodal.py  users.py
app/auth/: jwt.py  password.py
app/core/: config.py
app/crud/: __init__.py  attachments.py  message.py  session.py  user.py
app/db/: base.py  session.py
app/models/: __init__.py  attachment.py  chat_session.py  message.py  user.py  voice_styles.py
app/schemas/: attachment.py  message.py  session.py  token.py  user.py
app/services/: __init__.py  analyse_image_vision.py  audio_output.py  llm_client.py  ocr.py  s3_storage.py  storage.py  textract.py  transcribe.py
app/utils/: __init__.py  clean_text.py  delete_transcrption_job.py  extract_from_url.py
migrations/: env.py
migrations/versions/: 0adeb6494274_make_media_type_nullable.py  2a27d273b48c_add_document_to_mediatype_enum.py  362b1990e06f_add_attachments_table.py  5a6a9f92a669_add_attachments_table.py  6543a3054eeb_init_schema.py  9b5f026db274_clean_migration.py  bd9cbcc737cc_add_attachments_table.py  f5fcb6b173ec_add_document_value_to_mediatype_enum.py  f8e5c60d6d7c_add_audio_url_column_to_attachments.py  fa1dbf5dd801_make_media_type_nullable.py
scripts/: test_db.py
src/agents/: __init__.py  chunker.py  indexer.py  retriever_agent.py  retriver.py
src/api/routers/: chat.py
