[project]
name = "BharatLens"
version = "0.1.0"
description = "Looking at global geopolitics through India’s perspective."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "anthropic>=0.69.0",
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
    "chromadb>=1.1.0",
    "fastapi>=0.118.0",
    "onnxruntime>=1.23.0",
    "openai>=1.109.1",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
    "uvicorn>=0.37.0",
]
