[project]
name = "BharatLens"
version = "0.1.0"
description = "Looking at global geopolitics through India’s perspective."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "boto3>=1.40.45",
    "fastapi>=0.118.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.33",
    "onnxruntime>=1.23.0",
    "openai>=1.109.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.43",
    "tiktoken>=0.11.0",
    "uvicorn>=0.37.0",
]
